@@ -73,6 +73,7 @@ Implement commands
     ::cv::convertScaleAbs matrix alpha beta
     ::cv::copyMakeBorder matrix top bottom left right borderType ?color_list?
     ::cv::countNonZero matrix
+    ::cv::determinant matrix
     ::cv::divide matrix_1 matrix_2 ?scale?
     ::cv::eigen matrix
     ::cv::eigenNonSymmetric matrix
