@@ -659,6 +659,10 @@ Opencv_Init(Tcl_Interp *interp)
         (Tcl_ObjCmdProc *) mat_countNonZero,
         (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
 
+    Tcl_CreateObjCommand(interp, "::" NS "::determinant",
+        (Tcl_ObjCmdProc *) mat_determinant,
+        (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
+
     Tcl_CreateObjCommand(interp, "::" NS "::eigen",
         (Tcl_ObjCmdProc *) mat_eigen,
         (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
